--- a/package.json
+++ b/package.json
@@ -18,7 +18,12 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "eslint": "eslint --ext .js,.jsx,.ts,.tsx src/",
+    "eslint:fix": "eslint --ext .js,.jsx,.ts,.tsx src/ --fix",
+    "prettier": "prettier --check public/index.html \"src/**/*.{ts,js,tsx}\"",
+    "prettier:fix": "prettier --write public/index.html \"src/**/*.{ts,js,tsx}\"",
+    "prettier:quick": "pretty-quick --pattern public/index.html --pattern \"src/*.{ts,js,tsx}\""
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
@@ -26,14 +31,19 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
+    "@squareboat/nest-console": "^1.0.7",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "commander": "^9.4.1",
     "dotenv": "^16.0.3",
+    "exceljs": "^4.3.0",
     "mysql2": "^2.3.3",
+    "nestjs-console": "^8.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "typeorm": "^0.3.11"
+    "typeorm": "^0.3.11",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
