--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "eslint:fix": "eslint --ext .js,.jsx,.ts,.tsx src/ --fix",
     "prettier": "prettier --check public/index.html \"src/**/*.{ts,js,tsx}\"",
     "prettier:fix": "prettier --write public/index.html \"src/**/*.{ts,js,tsx}\"",
-    "prettier:quick": "pretty-quick --pattern public/index.html --pattern \"src/*.{ts,js,tsx}\""
+    "prettier:quick": "pretty-quick --pattern public/index.html --pattern \"src/*.{ts,js,tsx}\"",
+    "typeorm": "typeorm-ts-node-commonjs"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
@@ -64,7 +65,7 @@
     "supertest": "^6.1.3",
     "ts-jest": "28.0.8",
     "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
+    "ts-node": "^10.9.1",
     "tsconfig-paths": "4.1.0",
     "typescript": "^4.7.4"
   },
