implement forgotPassword API

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,10 @@ USER=
 PASSWORD=
 DB=
 JWT_SECRET_KEY=
+PORT_APPLICATION=
+HOST_MAIL=
+USER_MAIL=
+PASS_MAIL=
+PORT_MAIL=
+URL_RESET_TOKEN=
+SENDER=
