--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "@nestjs/jwt": "^9.0.0",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-socket.io": "^9.1.6",
     "@nestjs/typeorm": "^9.0.1",
+    "@nestjs/websockets": "^9.1.6",
     "@squareboat/nest-console": "^1.0.7",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
